--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,7 @@
 ---
 deployment:
  tasks:
- - export DEPLOYPATH=/home/jqomjmcvmxtm/public_html/
- - /bin/cp index.html $DEPLOYPATH
- - /bin/cp style.css $DEPLOYPATH---
+ - export DEPLOYPATH=/home/jqomjmcvmxtm/public_html-test/
+ - /bin/cp public_html/index.html $DEPLOYPATH
+ - /bin/cp -R public_html/images $DEPLOYPATH/images
+ - /bin/cp public_html/style.css $DEPLOYPATH---
