--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,4 +4,4 @@ deployment:
  - export DEPLOYPATH=/home/jqomjmcvmxtm/public_html-test/
  - /bin/cp public_html/index.html $DEPLOYPATH
  - /bin/cp -R public_html/images $DEPLOYPATH/images
- - /bin/cp public_html/style.css $DEPLOYPATH---
+ - /bin/cp public_html/styles.css $DEPLOYPATH---
